Attempt to fix navbar spacing

--- a/src/custom-color.css
+++ b/src/custom-color.css
@@ -31,3 +31,9 @@ align-self: stretch;
   left: 0;
   top: 0;
 }
+.ventigator-logo-icon2 {
+  position: relative;
+  width: 66.4px;
+  height: 66.4px;
+  object-fit: cover;
+}
